[project]
name = "dl-energy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click==8.1.7",
    "httpx==0.27.0",
    "logging==0.4.9.6",
    "rich==13.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
